fixed some bugs

--- a/index.html
+++ b/index.html
@@ -144,7 +144,14 @@
                 </div>
             </div>
         </div>
-        <iframe class="dex-guru live-view" src="https://dex.guru/"></iframe>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12 dex">
+                    <iframe class="dex-guru live-view" src="https://dex.guru/"></iframe>
+                </div>
+            </div>
+        </div>
+
     </main>
     <footer>
         <p class="text">Copyright © 2021 SafePluto is operated by OverOne Infinity Club Limited incorporated in the</p>
