--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
                     <img class="contact-item" src="images/tiktok.png" alt="">
                     <img class="contact-item" src="images/twitter.png" alt="">
                     <img class="contact-item" src="images/whatsapp.png" alt="">
-                    <img class="contact-item" src="images/youtube.png" alt="">
+                    <img class="contact-item roadmap-visible" src="images/youtube.png" alt="">
                 </div>
             </div>
         </div>
         <div class="container">
-            <div class="row properties roadmap-visible">
+            <div class="row properties ">
                 <div class="col-xl-4">
                     <div class="prop-item">                        
                         <img src="images/item-2.png" alt="" class="prop-img">
@@ -119,7 +119,7 @@
                     <div class="prop-item">
                         <img src="images/item-3.png" alt="" class="prop-img">
                         <div class="prop-title">UNLIMITED REWARDS</div>
-                        <div class="prop-description text giveaway-visible">PL69 wants Holders to earn rewards from every transaction made within the 69 network as they watch their SafePluto balance grow. PL69 aims for Pluto not mars or even the moon. PL69 is here to show you how it is done dawg. PL69 gives away real rewards, and be dropping on you Sneaks and RMs….you haven’t seen anything yet.&nbsp;</div>
+                        <div class="prop-description text ">PL69 wants Holders to earn rewards from every transaction made within the 69 network as they watch their SafePluto balance grow. PL69 aims for Pluto not mars or even the moon. PL69 is here to show you how it is done dawg. PL69 gives away real rewards, and be dropping on you Sneaks and RMs….you haven’t seen anything yet.&nbsp;</div>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
         <div class="container ">
             <div class="row">
                 <div class="col-xl-12">
-                    <div class="title ">safepluto giveaways</div>
+                    <div class="title giveaway-visible">safepluto giveaways</div>
                     <img class="giveaway-img" src="images/giveaway.jpg" alt="">
                     <p class="giveaway-info-title text">$100,000 GIVEAWAY ANNOUNCEMENT!</p>
                     <p class="giveaway-info text">For more information about our exclusive giveaways, please click below!</p>
