--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                         </p>
                         <p class="description">
                             Every time a buyer purchases tokens from Pancake Swap, there is a 1 in 6 chance (16.67%) that they are rewarded with double the amount of tokens (after taxes). 
+                            Token will be minted instantly within the same purchase transaction.
                         </p>
-                        <p class="description">Token will be minted instantly within the same purchase transaction.</p>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row ">
                 <div class="col-xl-12">
-                    <div class="title">join the dark side</div>
+                    <div class="title roadmap-visible">join the dark side</div>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                     <div class="prop-item">
                         <img src="images/item-3.png" alt="" class="prop-img">
                         <div class="prop-title">UNLIMITED REWARDS</div>
-                        <div class="prop-description text ">Formalise CEX Listings, Create Major Partnerships, Further Donations, Continued Marketing Campaigns, Sponsored rocketship launches, Charity events planned & voted on by the community.</div>
+                        <div class="prop-description text live-view">Formalise CEX Listings, Create Major Partnerships, Further Donations, Continued Marketing Campaigns, Sponsored rocketship launches, Charity events planned & voted on by the community.</div>
                     </div>
                 </div>
             </div>
@@ -128,16 +128,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-12 dex">
-                    <iframe class="dex-guru live-view" src="https://dex.guru/"></iframe>
+                    <iframe class="dex-guru" src="https://dex.guru/"></iframe>
                 </div>
             </div>
         </div>
 
     </main>
     <footer>
-        <p class="text">Copyright © 2021 SafePluto is operated by OverOne Infinity Club Limited incorporated in the</p>
-        <p class="text"> Free Republic of Liberland under Number 22014</p>
-        <p class="text">SafePluto.io - All Rights Reserved.</p>
+        <p class="footer-text">Copyright © 2021 SafePluto is operated by OverOne Infinity Club Limited incorporated in the</p>
+        <p class="footer-text"> Free Republic of Liberland under Number 22014</p>
+        <p class="footer-text">SafePluto.io - All Rights Reserved.</p>
     </footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
