--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 
     </main>
     <footer>
-        <p class="footer-text">Copyright © 2021 SafePluto is operated by OverOne Infinity Club Limited incorporated in the</p>
+        <p class="footer-text">Copyright © 2021 SafeApollo is operated by OverOne Infinity Club Limited incorporated in the</p>
         <p class="footer-text"> Free Republic of Liberland under Number 22014</p>
-        <p class="footer-text">SafePluto.io - All Rights Reserved.</p>
+        <p class="footer-text">2021 All Rights Reserved.</p>
     </footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
