changed card text color

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <div class="col-xl-6"><img class="board-img" src="images/block.jpg" alt=""></div>
                 <div class="col-xl-6 ">
                     <div class="coin-description">
-                        <p class="description">                    
+                        <p>                    
                             SAFEAPOLLO is a community-driven cryptocurrency that operates in the growing and fast-moving digital currency space, creating wealth for everyone on the way to MOON.
                         </p>
-                        <p class="description">
+                        <p>
                             Every time a buyer purchases tokens from Pancake Swap, there is a 1 in 6 chance (16.67%) that they are rewarded with double the amount of tokens (after taxes). 
                             Token will be minted instantly within the same purchase transaction.
                         </p>
@@ -97,7 +97,7 @@
                     <div class="prop-item">                        
                         <img src="images/item-2.png" alt="" class="prop-img">
                         <div class="prop-title">COMMUNITY DRIVEN</div>
-                        <div class="prop-description text">
+                        <div class="prop-description">
                             Launch Project with Pancake Swap, Reddit, BlockFolio, 4Chan, Marketing & Influencer Marketing, Formalise WhitePaper, Audit Applications, Apply for Coin Gecko.</div>
                     </div>
                 </div>
@@ -105,14 +105,14 @@
                     <div class="prop-item">
                         <img src="images/item-1.png" alt="" class="prop-img">
                         <div class="prop-title">AUTOMATIC LIQUIDITY</div>
-                        <div class="prop-description text">Apply for Further Exchanges i.e WhiteBit, Explore NFT Market Place for Investors, Charity Partnerships, web reimagining/ redevelopment, Schedule AMAs & Launching of merchandise, Audit Completion.</div>
+                        <div class="prop-description">Apply for Further Exchanges i.e WhiteBit, Explore NFT Market Place for Investors, Charity Partnerships, web reimagining/ redevelopment, Schedule AMAs & Launching of merchandise, Audit Completion.</div>
                     </div>
                 </div>
                 <div class="col-xl-4">
                     <div class="prop-item">
                         <img src="images/item-3.png" alt="" class="prop-img">
                         <div class="prop-title">UNLIMITED REWARDS</div>
-                        <div class="prop-description text live-view">Formalise CEX Listings, Create Major Partnerships, Further Donations, Continued Marketing Campaigns, Sponsored rocketship launches, Charity events planned & voted on by the community.</div>
+                        <div class="prop-description live-view">Formalise CEX Listings, Create Major Partnerships, Further Donations, Continued Marketing Campaigns, Sponsored rocketship launches, Charity events planned & voted on by the community.</div>
                     </div>
                 </div>
             </div>
