--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </ul>
                 </div>
                 <div class="col-xl-3 switcher">
-                    <li class="telegram-container"><img class="telegram menu-item" src="images/telegram.png" alt=""></li>
+                    <li class="telegram-container"><a href="https://t.me/safeapollofficial"> <img class="telegram menu-item" src="images/telegram.png" alt=""></a></li>
 
                     <div class="switchers">
                         <p><img src="images/sun.png" alt=""></p>
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row ">
                 <div class="col-xl-12">
-                    <div class="title roadmap-visible">join the dark side</div>
+                    <div class="title roadmap-visible">roadmap</div>
                 </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
                 <div class="col-xl-4">
                     <div class="prop-item">                        
                         <img src="images/item-2.png" alt="" class="prop-img">
-                        <div class="prop-title">COMMUNITY DRIVEN</div>
+                        <div class="prop-title">Q2 - 2021</div>
                         <div class="prop-description">
                             Launch Project with Pancake Swap, Reddit, BlockFolio, 4Chan, Marketing & Influencer Marketing, Formalise WhitePaper, Audit Applications, Apply for Coin Gecko.</div>
                     </div>
@@ -104,14 +104,14 @@
                 <div class="col-xl-4">
                     <div class="prop-item">
                         <img src="images/item-1.png" alt="" class="prop-img">
-                        <div class="prop-title">AUTOMATIC LIQUIDITY</div>
+                        <div class="prop-title">Q3 - 2021</div>
                         <div class="prop-description">Apply for Further Exchanges i.e WhiteBit, Explore NFT Market Place for Investors, Charity Partnerships, web reimagining/ redevelopment, Schedule AMAs & Launching of merchandise, Audit Completion.</div>
                     </div>
                 </div>
                 <div class="col-xl-4">
                     <div class="prop-item">
                         <img src="images/item-3.png" alt="" class="prop-img">
-                        <div class="prop-title">UNLIMITED REWARDS</div>
+                        <div class="prop-title">Q4 - 2021</div>
                         <div class="prop-description live-view">Formalise CEX Listings, Create Major Partnerships, Further Donations, Continued Marketing Campaigns, Sponsored rocketship launches, Charity events planned & voted on by the community.</div>
                     </div>
                 </div>
@@ -121,14 +121,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
-                    <div class="title">Safe Apollo chart</div>                 
+                    <div class="title">SafeApollo chart</div>                 
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-xl-12 dex">
-                    <iframe class="dex-guru" src="https://dex.guru/"></iframe>
+                    <iframe class="dex-guru" src="https://dex.guru/token/0xbb4cdb9cbd36b01bd1cbaebf2de08d9173bc095c-bsc"></iframe>
                 </div>
             </div>
         </div>
