--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-xl-2 logo">                                         
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 col-xs-3 logo">                                         
                         <img class="logo-img" src="images/logo-new.jpg" alt="">                   
                 </div>
-                <div class="col-xl-7">
+                <div class="col-xl-7 col-lg-7 col-md-6 col-sm-4 col-xs-4 menu">
+                    <div class="mobile-menu">
+                        <li class="home">home</li>
+                        <li class="live">live view</li>
+                        <li class="roadmap">roadmap</li>
+                        <li class="roadmap">coming soon</li>
+                    </div>
+                    <div class="active-menu"><span></span><span></span><span></span></div>
                     <ul class="main-menu">
                         <li class="home"><div class="menu-item" >home</div></li>
                         <li class="live"><div class="menu-item">live view</div></li>
@@ -30,7 +37,7 @@
 
                     </ul>
                 </div>
-                <div class="col-xl-3 switcher">
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5 col-xs-5 switcher">
                     <li class="telegram-container"><a href="https://t.me/safeapollofficial"> <img class="telegram menu-item" src="images/telegram.png" alt=""></a></li>
 
                     <div class="switchers">
@@ -50,8 +57,8 @@
         </div>
         <div class="container container-board">
             <div class="row">
-                <div class="col-xl-6"><img class="board-img" src="images/block.jpg" alt=""></div>
-                <div class="col-xl-6 ">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12"><img class="board-img" src="images/block.jpg" alt=""></div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                     <div class="coin-description">
                         <p>                    
                             SAFEAPOLLO is a community-driven cryptocurrency that operates in the growing and fast-moving digital currency space, creating wealth for everyone on the way to MOON.
@@ -72,12 +79,12 @@
         </div>
         <div class="container">
             <div class="row tokens">
-                <div class="col-xl-6 token">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 token">
                     <div class="token-item">
                         <img src="images/coinmarket.png" alt="">
                     </div>
                 </div>
-                <div class="col-xl-6 token">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 token">
                     <div class="token-item">
                         <img src="images/geko.png" alt="">
                     </div>
@@ -86,14 +93,14 @@
         </div>
         <div class="container">
             <div class="row ">
-                <div class="col-xl-12">
+                <div class="col-xl-12 col-lg-12 col-md-12">
                     <div class="title roadmap-visible">roadmap</div>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row properties ">
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12 prop">
                     <div class="prop-item">                        
                         <img src="images/item-2.png" alt="" class="prop-img">
                         <div class="prop-title">Q2 - 2021</div>
@@ -101,14 +108,14 @@
                             Launch Project with Pancake Swap, Reddit, BlockFolio, 4Chan, Marketing & Influencer Marketing, Formalise WhitePaper, Audit Applications, Apply for Coin Gecko.</div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12 prop">
                     <div class="prop-item">
                         <img src="images/item-1.png" alt="" class="prop-img">
                         <div class="prop-title">Q3 - 2021</div>
                         <div class="prop-description">Apply for Further Exchanges i.e WhiteBit, Explore NFT Market Place for Investors, Charity Partnerships, web reimagining/ redevelopment, Schedule AMAs & Launching of merchandise, Audit Completion.</div>
                     </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12 prop">
                     <div class="prop-item">
                         <img src="images/item-3.png" alt="" class="prop-img">
                         <div class="prop-title">Q4 - 2021</div>
@@ -120,14 +127,14 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-xl-12">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="title">SafeApollo chart</div>                 
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-xl-12 dex">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 dex">
                     <iframe class="dex-guru" src="https://dex.guru/token/0xbb4cdb9cbd36b01bd1cbaebf2de08d9173bc095c-bsc"></iframe>
                 </div>
             </div>
