--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
     <header>
         <div class="container">
-            <div class="row">
+            <div class="row header-row">
                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 col-xs-3 logo">                                         
                         <img class="logo-img" src="images/logo-new.jpg" alt="">                   
                 </div>
-                <div class="col-xl-7 col-lg-7 col-md-6 col-sm-4 col-xs-4 menu">
+                <div class="col-xl-7 col-lg-7 col-md-6 col-sm-4 col-xs-3 menu">
                     <div class="mobile-menu">
                         <li class="home">home</li>
                         <li class="live">live view</li>
@@ -37,8 +37,8 @@
 
                     </ul>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5 col-xs-5 switcher">
-                    <li class="telegram-container"><a href="https://t.me/safeapollofficial"> <img class="telegram menu-item" src="images/telegram.png" alt=""></a></li>
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5 col-xs-6 switcher">
+                    <li class="telegram-container"><a href="https://t.me/SAFEAPOLLOOfficial"> <img class="telegram menu-item" src="images/telegram.png" alt=""></a></li>
 
                     <div class="switchers">
                         <p><img src="images/sun.png" alt=""></p>
